--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <section class="page-header">
       <h1 class="project-name">osueboy blog</h1>
       <h2 class="project-tagline">osueboy blog</h2>
+      
     </section>
 
     <section class="main-content">
-         probando
+         hola mayra
     </section>
 
   
